# al5d_cpp

./: .clang-format  CMakeLists.txt  README.md  decisions.md  default_al5d.json  install.sh  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
doc/: class_design.puml  class_design2.puml  class_design_base.puml  class_design_base_default.puml  class_design_base_traits copy.puml  class_design_base_traits.puml  class_design_configs.puml  class_design_controller.puml  class_design_controller_commands.puml  class_design_controller_states.puml  class_design_types.puml  class_sequence_base.puml  component_diagram.puml  component_diagram_implementations.puml  component_sequence_halt.puml  component_sequence_multiple.puml  component_sequence_mutiple_commands.puml  component_sequence_pose.puml  component_sequence_stop.puml  new_class_design.puml  package_diagram.puml  state_machine.puml  todo_class_design_base.puml  todo_class_design_types.puml  todo_class_sequence.puml  use_case_diagram.puml  use_case_diagram_subsystems.puml
examples/: CMakeLists.txt  al5d.json  al5d_poses.json  json_config.json  main.cpp
examples/1_move_to_angle/: CMakeLists.txt  main.cpp
examples/2_move_to_pose/: CMakeLists.txt  main.cpp
examples/3_controlled_al5d/: CMakeLists.txt  al5d.json  al5d_poses.json  main.cpp
examples/3_move_to_pose/: CMakeLists.txt  main.cpp
examples/4_controlled_al5d/: CMakeLists.txt  main.cpp
include/al5d_cpp/: AL5D.hpp  AL5D6D.hpp  AL5D6DConfig.hpp  AL5DBase.hpp  AL5DBaseConfig.hpp  AL5DConfig.hpp  AL5D_logging.hpp  Duration.hpp  Joint.hpp  JointAngle.hpp  JointConfig.hpp  JointType.hpp  JointTypeAngle.hpp  Serial.hpp  Timer.hpp  exceptions.hpp  log_lines.hpp  logging.hpp  readers.hpp  settings.hpp  traits.hpp  types.hpp
include/al5d_cpp/base/: AL5DBase.hpp  AL5DBaseConfig.hpp  Communicator.hpp  CommunicatorBase.hpp  Joint.hpp  JointAngle.hpp  JointBase.hpp  JointConfig.hpp  JointType.hpp  JointTypeAngle.hpp  SerialConfig.hpp  settings.hpp  types.hpp
include/al5d_cpp/base/configs/: AL5DBaseConfig.hpp  JointBaseConfig.hpp  JointConfig.hpp  PoseConfig.hpp  PosingConfig.hpp  SerialConfig.hpp
include/al5d_cpp/base/types/: Angle.hpp  Degree.hpp  DegreeRange.hpp  Degrees.hpp  DegreesRange.hpp  Duration.hpp  JointAngle.hpp  JointNameAngle.hpp  JointNameDegree.hpp  JointNameDegrees.hpp  JointType.hpp  JointTypeAngle.hpp  JointTypeDegree.hpp  JointTypeDegrees.hpp  Pose.hpp  PulseWidth.hpp  PulseWidthRange.hpp  typedefs.hpp
include/al5d_cpp/communicators/: Communicator.hpp  ConsoleCommunicator.hpp  LambdaCommunicator.hpp  SerialCommunicator.hpp  SerialPublisher.hpp  SerialPublisher_backup.hpp
include/al5d_cpp/controller/: Command.hpp  Context.hpp  ContextCommand.hpp  ContextState.hpp  Controller.hpp  State.hpp  commands.hpp  events.hpp  states.hpp
include/al5d_cpp/controller/commands/: AnglesCommand.hpp  PoseCommand.hpp
include/al5d_cpp/controller/states/: CalibratingState.hpp  ConnectingState.hpp  FinalizingState.hpp  HaltingState.hpp  (+4 more)
include/al5d_cpp/exceptions/: InvalidBoardChannel.hpp  InvalidDegree.hpp  InvalidDegreeRange.hpp  InvalidDegrees.hpp  InvalidDegreesRange.hpp  InvalidNumberOfJoints.hpp  InvalidPoseName.hpp  InvalidPulseWidth.hpp  InvalidPulseWidthRange.hpp  MissingCommunicator.hpp
include/al5d_cpp/interfaces/: ICommunicator.hpp
include/al5d_cpp/mixins/: ConsoleRobot.hpp  LambdaRobot.hpp  LoggingRobot.tpp  SerialRobot.hpp
include/al5d_cpp/readers/: json_reader.hpp
include/al5d_cpp/robot_mixins/: LambdaRobot.hpp  LambdaRobot.tpp  SerialRobot.hpp
scripts/: assess.sh  build.sh  clean.sh  install.sh  install_dependencies.sh
scripts/assessments/: cppcheck.sh  cppcheck_suspressions.xml
src/: AL5D.cpp  AL5D6D.cpp  AL5D6DConfig.cpp  AL5DBase.cpp  AL5DConfig.cpp  AL5D_logging.cpp  ConsoleRobot.cpp  Duration.cpp  Joint.cpp  JointConfig.cpp  JointTypeAngle.cpp  Serial.cpp  SerialRobot.cpp  Timer.cpp  exceptions.cpp  json_deserialize.cpp  log_lines.cpp  logging.cpp  temp_logs.cpp  types.cpp
src/base/: AL5DBase.cpp  AL5DBaseConfig.cpp  AL5DBase_pose.cpp  Communicator.cpp  CommunicatorBase.cpp  Joint.cpp  JointBase.cpp  JointConfig.cpp  JointTypeAngle.cpp  SerialConfig.cpp
src/base/configs/: AL5DBaseConfig.cpp  JointBaseConfig.cpp  JointConfig.cpp  PoseConfig.cpp  PosingConfig.cpp  SerialConfig.cpp
src/base/types/: Angle.cpp  Degree.cpp  DegreeRange.cpp  Degrees.cpp  DegreesRange.cpp  Duration.cpp  JointNameAngle.cpp  JointNameDegree.cpp  JointNameDegrees.cpp  JointTypeAngle.cpp  JointTypeDegree.cpp  JointTypeDegrees.cpp  Pose.cpp  PulseWidth.cpp  PulseWidthRange.cpp
src/communicators/: ConsoleCommunicator.cpp  LambdaCommunicator.cpp  SerialCommunicator.cpp  SerialPublisher.cpp  SerialPublisher_backup.cpp
src/controller/: Context.cpp  ContextCommand.cpp  ContextState.cpp  Controller.cpp  State.cpp
src/controller/commands/: AnglesCommand.cpp  PoseCommand.cpp
src/controller/states/: CalibratingState.cpp  ConnectingState.cpp  FinalizingState.cpp  HaltingState.cpp  IdlingState.cpp  InitializingState.cpp  MovingState.cpp  RunningState.cpp
src/exceptions/: InvalidBoardChannel.cpp  InvalidDegree.cpp  InvalidDegreeRange.cpp  InvalidDegrees.cpp  InvalidDegreesRange.cpp  InvalidNumberOfJoints.cpp  InvalidPoseName.cpp  InvalidPulseWidth.cpp  InvalidPulseWidthRange.cpp  MissingCommunicator.cpp
src/readers/: json_reader.cpp
src/traits/console_trait/: ConsoleCommunicator.cpp
src/traits/json_trait/: json_deserialize.cpp
src/traits/lambda_trait/: LambdaCommunicator.cpp
src/traits/pose_trait/: Pose.cpp
src/traits/serial_trait/: SerialCommunicator.cpp
tests/: CMakeLists.txt  Joint_old.cpp  Joint_tests.cpp  test_main.cpp
tests/AL5D/: AL5D_angle_from_degrees.cpp  AL5D_move_to.cpp
tests/testables/: TestableAL5D6D.hpp
tests/traits/configurable_trait/: TestableTrait.hpp  multiple_joints.json  single_joint.json  test_JSONTrait.cpp
tests/unit_tests/: AL5D6D_tests.cpp  CMakeLists.txt  Joint_tests.cpp  test_main.cpp
tests/unit_tests/testables/: TestableAL5D6D.cpp  TestableAL5D6D.hpp  TestableCommunicator.cpp  TestableCommunicator.hpp
(+33 files in other folders)
